# avone_ros2_ws

./: .gitignore  frames_2025-05-20_17.14.17.gv  frames_2025-05-27_22.22.49.gv  frames_2025-05-27_23.05.47.gv  frames_2025-05-28_20.04.26.gv  joint_control_test.sdf  keys.sh  keys.txt  track2.pgm
src/avone/: CMakeLists.txt  Launchcmds.txt  frames_2025-05-25_18.24.59.gv  lidar_overlay.py  package.xml  setup.cfg  setup.py  track2.data  track2.yaml  track3.data  track3.pgm  track3.yaml  trigger_to_float.py
src/avone/avonemodel/: config.json  robot.urdf
src/avone/config/: Nav2.yaml  Nav2_cost.yaml  ackermann_drive_controller.yaml  amcl_params.yaml  dual_ekf_navsat.yaml  ekf.yaml  map_ekf.yaml  mapper_params_offline_async.yaml  mapper_params_online_async.yaml  ros_gz_bridge.yaml  view_bot.rviz  voxel_nav2.yaml  working nav 2 yaml 
src/avone/description/: camera.xacro  depthcamera.xacro  dualrgbdcamera.xacro  gazebo_control.xacro  lidar.xacro  rgbdcamera.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  sensors.xacro
src/avone/launch/: amcl.launch.py  depthcam_mapping.launch.py  dual_ekf_navsat.launch.py  launch_sim.launch.py  map_server.launch.py  mapping.launch.py  nav2.launch.py  rosbridge.launch.py  roscontrol.launch.py  rsp.launch.py  simple.launch.py  teleop_joy.launch.py  yolo.launch.py
src/avone/rviz/: robot_and_scan.rviz
src/avone/tracks/: TrackA.data  TrackA.pgm  TrackA.yaml  TrackB.pgm  TrackB.yaml  mapA.data  mapA.pgm  mapA.yaml  my_map_save.pgm  my_map_save.yaml
src/avone/worlds/: Fig8.world  joint_control_test.sdf  random_cylinders.sdf  (+1 more)
(+58 files in other folders)
