[metadata]
name = avone
version = 0.0.1
description = AV.One utilities
author = Jayden H.
author_email = you@example.com
license = Apache-2.0

[options]
# this is your Python module folder
packages =
    scripts

install_requires =
    rclpy
    sensor_msgs
    cv_bridge
    tf2_ros
    tf_transformations
    numpy
    opencv-python

zip_safe = True

[options.entry_points]
console_scripts =
    # make `ros2 run avone lidar_image_overlay` invoke your node
    lidar_image_overlay = scripts.lidar_image_overlay:main
